<resources>
    <string name="app_name">Campus Connect</string>
    <string name="submit">Submit</string>
    <string name="e_name">Your name</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="username">User name</string>
    <string name="hallticket_user">Hallticket Number / Username</string>
    <string name="hallticket">Hallticket Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in"> Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--related to dropdown menu -->

    <string name="select_year">Select Year</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_hie">Select Person</string>
    <string-array name="year">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>

    <string-array name="branch">
        <item>CSE</item>
        <item>CIVIL</item>
        <item>ECE</item>
        <item>EEE</item>
        <item>MECH</item>
    </string-array>

    <string-array name="hie">

        <item>HOD</item>
        <item>principal</item>
        <item>CEO</item>
    </string-array>
    <string name="title_activity_campus_connect">CampusConnect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
